2019-09-01  Iain Sandoe  <iain@sandoe.co.uk>

	Backport from mainline.
	2019-07-13  Iain Sandoe  <iain@sandoe.co.uk>

	* gcc.target/powerpc/stabs-attrib-vect-darwin.c: Require stabs
	support.

2019-09-01  Iain Sandoe  <iain@sandoe.co.uk>

	Backport from mainline.
	2019-06-24  Iain Sandoe  <iain@sandoe.co.uk>

	* gcc.target/powerpc/safe-indirect-jump-1.c: Skip for Darwin.
	* gcc.target/powerpc/safe-indirect-jump-7.c: Likewise.

2019-09-01  Iain Sandoe  <iain@sandoe.co.uk>

	Backport from mainline.
	2019-04-15  Dominique d'Humieres  <dominiq@gcc.gnu.org>

	PR tree-optimization/90020
	* gcc.dg/torture/pr90020.c: Add linker options for darwin.

2019-09-01  Iain Sandoe  <iain@sandoe.co.uk>

	Backport from mainline.
	2019-05-10  Iain Sandoe  <iain@sandoe.co.uk>

	* gcc.target/x86_64/abi/avx512f/abi-avx512f.exp: Darwin is
	now tested.
	* gcc.target/x86_64/abi/avx512f/asm-support-darwin.s: New.

2019-09-01  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.c-torture/execute/20190901-1.c: New test.

2019-08-31  Iain Sandoe  <iain@sandoe.co.uk>

	Backport from mainline.
	2019-06-24  Iain Sandoe  <iain@sandoe.co.uk>

	* gcc.target/powerpc/spec-barr-1.c: Adjust scan assembler regex
	to recognise Darwin's register names.

2019-08-31  Iain Sandoe  <iain@sandoe.co.uk>

	Backport from mainline.
	2019-06-24  Iain Sandoe  <iain@sandoe.co.uk>

	* gcc.dg/cpp/isysroot-1.c: Use <example.h> as the test header.
	* gcc.dg/cpp/usr/include/stdio.h: Rename...
	* gcc.dg/cpp/usr/include/example.h: ... to this.

2019-08-31  Iain Sandoe  <iain@sandoe.co.uk>

	Backport from mainline.
	2019-06-23  Iain Sandoe  <iain@sandoe.co.uk>

	* gcc.target/powerpc/builtins-2.c: Require VSX hardware support.

2019-08-31  Iain Sandoe  <iain@sandoe.co.uk>

	Backport from mainline.
	2019-06-23  Iain Sandoe  <iain@sandoe.co.uk>

	* gcc.target/powerpc/pr80125.c (foo): Use an unsigned char
	vector explicitly for the vec_perm.

2019-08-31  Iain Sandoe  <iain@sandoe.co.uk>

	Backport from mainline.